# Game-platform

./: requirements.txt
backend/game_platform/: Dockerfile  database_operations.py  greenhouse.py  main.py  mqtt_client.py  node.py  pyproject.toml  settings.py
backend/rest-api/: Dockerfile  database.py  game_platform.db  main.py  pyproject.toml  tictactoe_rooms.json
backend/rest-api/business/: auth_operations.py  database_operations.py
backend/rest-api/models/: games.py  greenhouse.py  settings.py  user.py
backend/rest-api/routers/: auth.py  games.py  lobby.py  settings.py  tictactoe.py  timeseries.py
backend/rest-api/schemas/: tictactoe.py  user.py
backend/rest-api/utils/: auth.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/html/src/: game.html  index.html  tictactoe.html
frontend/src/: App.js  config.js
frontend/src/components/: Lobby.js  Login.js  Register.js
frontend/src/components/Games/: tictactoe.js
